feat: add rota que lista os cursos ativos da UFCG
